--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,25 @@
 {
     "name": "thinframe/twig-application",
+    "type": "library",
+    "homepage": "http://thinframe.net",
     "description": "Twig View for Karma Framework",
-    "require": {
-        "twig/twig": "dev-master"
-    },
+    "keywords": ["thinframe", "karma", "twig"],
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Sorin Badea",
-            "email": "sorin.badea91@gmail.com"
+            "email": "sorin.badea91@gmail.com",
+            "homepage": "http://sorinbadea.me",
+            "role": "Developer"
         }
     ],
-    "minimum-stability": "dev"
+    "require": {
+        "twig/twig": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src"
+        }
+    }
 }
