--- a/src/ThinFrame/Twig/resources/services.yml
+++ b/src/ThinFrame/Twig/resources/services.yml
@@ -2,13 +2,13 @@ services:
     thinframe.twig.views_path_mapper:
         class: 'ThinFrame\Twig\ViewPathMapper'
 
-    thinframe.twig.filesystem:
-        class: 'Twig_Loader_Filesystem'
-        arguments: ['/']
+    thinframe.twig.loader:
+        class: 'ThinFrame\Twig\TemplateLoader'
+        arguments: ['@thinframe.twig.views_path_mapper']
 
     thinframe.twig.environment:
         class: 'Twig_Environment'
-        arguments: ['@thinframe.twig.filesystem']
+        arguments: ['@thinframe.twig.loader']
 
     thinframe.twig.listeners.application_metadata:
         class: 'ThinFrame\Twig\Listeners\ApplicationMetadataListener'
